--- a/.github/workflows/compile-and-release.yaml
+++ b/.github/workflows/compile-and-release.yaml
@@ -41,7 +41,7 @@ jobs:
       - name: Compile LaTeX to pdf
         uses: dante-ev/latex-action@latest
         with:
-          root_file: main.tex
+          root_file: answer-sheet.tex
           compiler: pdflatex
           args: -interaction=nonstopmode -shell-escape
           
@@ -63,6 +63,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: ./main.pdf
-          asset_name: main.pdf
+          asset_path: ./answer-sheet.pdf
+          asset_name: answer-sheet.pdf
           asset_content_type: pdf
